[gd_scene load_steps=6 format=3 uid="uid://c1cg53xmco1n3"]

[ext_resource type="Script" path="res://entity/objects/sign.gd" id="1_8y55v"]
[ext_resource type="Texture2D" uid="uid://b4agidyr76jwr" path="res://resources/sprites/sign.png" id="2_sal5s"]
[ext_resource type="Theme" uid="uid://bk1llxpthaj7w" path="res://resources/ui/main_theme.tres" id="3_p8dd2"]
[ext_resource type="StyleBox" uid="uid://cgibn2xtk7bja" path="res://resources/ui/label_background_style_override.tres" id="4_rcyrl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lirxu"]
size = Vector2(32, 96)

[node name="Sign" type="Area2D"]
collision_layer = 256
script = ExtResource("1_8y55v")
text = "This sign has not yet been given text in the editor."

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_lirxu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sal5s")
region_rect = Rect2(64, 64, 64, 192)

[node name="TextPos" type="Node2D" parent="."]
z_index = 100
position = Vector2(0, -48)

[node name="Text" type="Label" parent="TextPos"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -32.0
offset_right = 83.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_p8dd2")
theme_override_styles/normal = ExtResource("4_rcyrl")
text = "Placeholder text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
